Bug 93407 - Draw crashes when changing line width using sidebar
Summary: Draw crashes when changing line width using sidebar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords:
: 93619 93804 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-08-13 10:51 UTC by Gauthier
Modified: 2016-10-25 19:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gauthier 2015-08-13 10:51:13 UTC
Hello,

If I use the properties side bar to change line width (of any type of line, i.e. box contours, connectors, etc.), Draw either, freeze then crash or crash directly after I validate my choice of width. If I right click on a line to edit its properties and change width from there, Draw behaves normally.

LO 5.0.0.5
Kubuntu 15.04 x86_64
Plasma 5.3.2
Comment 1 Gauthier 2015-08-13 11:00:11 UTC
This is very similar to a bug supposedly fixed:

https://bugs.documentfoundation.org/show_bug.cgi?id=91542

and its duplicate

https://bugs.documentfoundation.org/show_bug.cgi?id=91536

but it is still happening on my system.
Comment 2 Commit Notification 2015-08-13 12:01:19 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b556f14fab25ddccbe9a54fe53450a641dbc5a49

tdf#93407 GrabFocus during dispose

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-08-13 16:30:09 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6a223ad5ac390881b54eeed7b39ea181962b1274&h=libreoffice-5-0

tdf#93407 GrabFocus during dispose

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Maxim Monastirsky 2015-08-24 15:52:03 UTC
*** Bug 93619 has been marked as a duplicate of this bug. ***
Comment 5 Maxim Monastirsky 2015-08-31 12:07:08 UTC
*** Bug 93804 has been marked as a duplicate of this bug. ***