tdf#93407 GrabFocus during dispose

Reproduced with the gen vclplug

Change-Id: Ia8a5c73908f5af47ef55b4431b6e1e5a21609e7d
(cherry picked from commit b556f14fab25ddccbe9a54fe53450a641dbc5a49)
Reviewed-on: https://gerrit.libreoffice.org/17705
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>