svx/source/sidebar/line/LineWidthControl.cxx
@@ -184,9 +184,9 @@ void LineWidthControl::Initialize()
 
 void LineWidthControl::GetFocus()
 {
-    if(!mbVSFocus)
+    if (!mbVSFocus && maMFWidth)
         maMFWidth->GrabFocus();
-    else
+    else if (maVSWidth)
         maVSWidth->GrabFocus();
 }
 
